--- a/src/assets/index.css
+++ b/src/assets/index.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.n-menu .n-submenu .n-menu-item-content {
+  font-size: 12px;
+}
+.n-menu-item {
+  --n-item-height: 20px !important;
+}
+.text-tiny {
+  font-size: 0.5rem;
+  line-height: 1rem;
+}
